--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 									<div class="col-6 col-12-medium">
 										<h3>Cove-Related App</h3>
 										<p>Reward: From $10 to $150<br>
-										Since the time I started this server people have offered me different types of apps to fulfill different tasks. Unfortunately, only the Yuzu/Ryu updaters were accepted.
+										Since the time I started this server people have offered me different types of apps to fulfill different tasks.
 										</p>
 									</div>
 								</div>
