--- a/bounties.html
+++ b/bounties.html
@@ -73,7 +73,7 @@
 									</li>
 									<li>
 										<span class="image">
-										<img src="webm/EmuSAK.png" type="image/png" style="width: 360px;"/>
+										<img type="image/png" style="width: 360px;" src="webm/EmuSAK.PNG">
 										</span>
 										</span>
 										<a href="https://github.com/sinscove/EmuSAK" style="text-decoration: underline;" ><h3>EmuSAK</h3></a>
